<resources>
    <string name="app_name">Lab1Kotlin2</string>
    <string name="cancel">Відміна</string>
    <string name="from_label">від:</string>
    <string name="to_label">до:</string>
    <string name="city1">Київ</string>
    <string name="city2">Львів</string>
    <string name="choose_time">Вибір часу</string>
    <string name="title">Вибір потягу</string>
    <string name="send_btn">ОК</string>
    <string name="no_time_input">Оберіть час відправки</string>
    <string name="one">\" з часом відправки \"</string>
    <string name="success_insert">Дані успішно додано</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="deleteItem">delete</string>
    <string name="open">Відкрити</string>
    <string name="choose">Обрати</string>
</resources>